JG-2004-07-21-0: Bugfix:    Fixed a bug in aimk -shared-libs.
                            Fixed default busy handling in event client.
                 Doc.:      Described use of bdb_checkpoint.sh in Berkeley DB
                            README file.
                 Review:    CR

MD-2004-07-20-0: Bugfix:    variable syntax :  equal sign support
                 Issue:     1118
                 Bugtraq:   5075398
                 Review:    JG
                 Changed:   qsub, qrsh, qsh

SG-2004-07-20-0: Bugfix:    jobs on hold due to -a time cause qmaster/schedd get out of sync
                 Issue:     1154
                 Bugtraq:   5074788
                 Changed:   scheduler
                 Review:    DT

MD-2004-07-19-0: Bugfix:    sched_conf(5) reprioritize_interval should default to 0
                 Issue:     1139
                 Bugtraq:   5075451
                 Changed:   schedd default config, schedd
                 Review:    SG

SG-2004-07-19-0: Bugfix:    - The usage in the sharetree got lost.
                            - fixed a mirror interface time out, which disabled
                              sheduling intervals greater than 1 min.
                            - fixed a mt problem on qmaster shutdown  
                 Changed:   qmaster
                 Issue:     1094
                 Bugtraq:   5075346
                 Review:    DT

AH-2004-07-13-1: Bugfix:    Deleted pending job appears in qstat
                            Problem was that finished jobs generally were
                            displayed by qstat. Removed broken code that was
                            supposed to mask out running/finished jobs at qmaster
                            side. Added code in qmaster to improve diagnostics
                            in cases such as new found bug #1154.
                 Issue:     1117
                 Bugtraq:   5072481
                 Review:    JG
