@@ -128,5 +128,12 @@ SCHEDD_CONF="1"
 SHADOW_HOST="hostname"
 
 # Remove this execution hosts in automatic mode
-# (mandatory for unistallation of executions hosts)
+# (mandatory for unistallation of execution hosts)
 EXEC_HOST_LIST_RM="host1 host2 host3 host4"
+
+# This option is used for startup script removing. 
+# If true, all rc startup scripts will be removed during
+# automatic deinstallation. If false, the scripts won't
+# be touched.
+# (mandatory for unistallation of execution/qmaster hosts)
+REMOVE_RC="false"
