@@ -1,3 +1,9 @@
+MD-2004-07-22-0: Bugfix:    uninstall procedure doesn't remove rc-script of execd!
+                 Changed:   inst-sge, autoinstall template
+                 Issue:     1130
+                 Bugtraq:   5071868
+                 Review:    JG
+
 JG-2004-07-21-0: Bugfix:    Fixed a bug in aimk -shared-libs.
                             Fixed default busy handling in event client.
                  Doc.:      Described use of bdb_checkpoint.sh in Berkeley DB
